--- a/src/app/shared/components/navbar/navbar.scss
+++ b/src/app/shared/components/navbar/navbar.scss
@@ -145,6 +145,7 @@
     text-align: center;
 
     &.active {
+      padding: 15px 12px;
       border-radius: 8px;
     }
 
